--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "react-music-api-search",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "npm": "6.1.0",
+    "node": "9.5.0"
+  },
   "dependencies": {
     "axios": "^0.18.0",
     "react": "^16.4.1",
